upp-factset-provisioner/cloudformation/loader-security-group-provisioner.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: This template deploys a security group to be used by the UPP Factset Loader

Metadata:
    AWS::CloudFormation::Interface:
        - Label: FT standard tagging
          Parameters:
             - TagEnvironment
             - TagTeamDL
             - TagSystemCode
             - TagIpCode
             - TagDescription

Parameters:
    DBVPC:
        Description: Choose which VPC the Aurora DB should be deployed TagStopSchedule
        Type: AWS::EC2::VPC::Id

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    EnvironmentTag:
        Description: Tag detail for the Environment; d for team clusters, t for staging and p for production
        Type: String
        AllowedValues:
            - 'd'
            - 't'
            - 'p'
        Default: d

    TagTeamDL:
        Description: Tag of the TeamDL
        Type: String
        AllowedPattern: ^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$
        ConstraintDescription: There must be a valid email address for the TeamDL
        Default: universal.publishing.platform@ft.com

    TagSystemCode:
        Description: The system code for the environment
        Type: String
        Default: upp

    TagIpCode:
        Description: The environment ipCode
        Type: String
        AllowedPattern: '[P][0-9]*'
        Default: P196

    TagDescription:
        Description: Tag detail for the describing the instance
        Type: String
        Default: UPP Factset Aurora Store

Resources:
    LoaderSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Join ["" , ["upp-factset-loader-security-group-", !Ref EnvironmentName]]
        GroupDescription: "Security group for UPP Factset Loader Instance"
        VpcId: !Ref DBVPC
        Tags:
            - Key: Name
              Value: !Join ["" , ["UPP Factset Loader Security Group ", !Ref EnvironmentName]]
            - Key: environment
              Value: !Ref EnvironmentTag
            - Key: teamDL
              Value: !Ref TagTeamDL
            - Key: systemCode
              Value: !Ref TagSystemCode
            - Key: ipCode
              Value: !Ref TagIpCode
            - Key: description
              Value: "Security group for UPP Factset Loader Instance"
        SecurityGroupIngress:
            - Description: "SSH"
              IpProtocol: tcp
              FromPort: 22
              ToPort: 22
              CidrIp: 82.136.1.214/32
            - Description: "Park Royal"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 213.216.148.1/32
            - Description: "EU VPN Client"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 62.25.64.1/32
            - Description: "US VPN Client"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 64.210.200.1/32
            - Description: "FT Sofia Office - IP range 1"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 94.156.217.224/29
            - Description: "FT Sofia Office - IP range 2"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 212.36.14.64/28
            - Description: "Bracken House FTWLAN"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 213.86.66.72/29


Outputs:
  LoaderSecurityGroupId:
    Description: Id of newly created security group
    Value: !Ref LoaderSecurityGroup
