upp-factset-provisioner/cloudformation/security-and-parameter-group-provisioner.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: This template deploys a security group and a parameter group to be used by UPP Factset RDS Store

Metadata:
    AWS::CloudFormation::Interface:
        - Label: FT standard tagging
          Parameters:
             - TagEnvironment
             - TagTeamDL
             - TagSystemCode
             - TagIpCode
             - TagDescription

Parameters:
    DBVPC:
        Description: Choose which VPC the Aurora DB should be deployed TagStopSchedule
        Type: AWS::EC2::VPC::Id

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    EnvironmentTag:
        Description: Tag detail for the Environment; d for team clusters, t for staging and p for production
        Type: String
        AllowedValues:
            - 'd'
            - 't'
            - 'p'
        Default: d

    LoaderSecurityGroup:
        Description: Factset Loader security group id
        Type: String

    TagTeamDL:
        Description: Tag of the TeamDL
        Type: String
        AllowedPattern: ^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$
        ConstraintDescription: There must be a valid email address for the TeamDL
        Default: universal.publishing.platform@ft.com

    TagSystemCode:
        Description: The system code for the environment
        Type: String
        Default: upp

    TagIpCode:
        Description: The environment ipCode
        Type: String
        AllowedPattern: '[P][0-9]*'
        Default: P196

    TagDescription:
        Description: Tag detail for the describing the instance
        Type: String
        Default: UPP Factset RDS Group

Mappings:
    EnvironmentCidrs:
        dev:
            EKS: 10.169.0.0/18
            VPC: 10.172.32.0/21
        prod:
            EKS: 10.168.64.0/18
            VPC: 10.172.40.0/21

Resources:
    FactsetSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Join ["" , ["upp-factset-rds-security-group-", !Ref EnvironmentName]]
        GroupDescription: "Security group for UPP Factset RDS store"
        VpcId: !Ref DBVPC
        Tags:
            - Key: Name
              Value: !Join ["" , ["UPP Factset RDS Security Group ", !Ref EnvironmentName]]
            - Key: environment
              Value: !Ref EnvironmentTag
            - Key: teamDL
              Value: !Ref TagTeamDL
            - Key: systemCode
              Value: !Ref TagSystemCode
            - Key: ipCode
              Value: !Ref TagIpCode
            - Key: description
              Value: "Security group for UPP Factset RDS store"
        SecurityGroupIngress:
            - Description: "Content Platform EKS CIDR"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: !FindInMap [EnvironmentCidrs, !Ref EnvironmentName, EKS]
            - Description: "Content Platform VPC CIDR"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: !FindInMap [EnvironmentCidrs, !Ref EnvironmentName, VPC]
            - Description: "AWS Client VPN, eu-west-1"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 10.165.0.0/24
            - Description: "AWS Client VPN, us-east-1"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              CidrIp: 10.166.0.0/24
            - Description: "Permit access to factset-loader"
              IpProtocol: tcp
              FromPort: 3306
              ToPort: 3306
              SourceSecurityGroupId: !Ref LoaderSecurityGroup

    FactsetParameterGroup:
      Type: AWS::RDS::DBParameterGroup
      Properties:
        Description: 'UPP Factset RDS Parameter Group'
        Family: aurora-mysql8.0
        Parameters:
          local_infile: 1
        Tags:
            - Key: Name
              Value: !Join ["" , ["UPP Factset RDS Parameter Group ", !Ref EnvironmentName]]
            - Key: environment
              Value: !Ref EnvironmentTag
            - Key: teamDL
              Value: !Ref TagTeamDL
            - Key: systemCode
              Value: !Ref TagSystemCode
            - Key: ipCode
              Value: !Ref TagIpCode
            - Key: description
              Value: 'Parameter Group for Factset RDS Store'

Outputs:
  FactsetSecurityGroupId:
    Description: Id of newly created security group
    Value: !Ref FactsetSecurityGroup
  FactsetParameterGroupName:
    Description: Name of the newly created parameter group
    Value: !Ref FactsetParameterGroup
